terraform-yml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-api
  labels:
    app: quarkus-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quarkus-api
  template:
    metadata:
      labels:
        app: quarkus-api
    spec:
      containers:
      - image: quarkus/first-project-jvm:1.0.1
        name: quarkus-api
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
