terraform-yml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-api
spec:
  selector:
    app: quarkus-api
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer
